# HyperMiner_SourceCode

./: .gitmodules  README.md  setup.sh
Miner/: README.md
Miner/Integration/: Benchmark_Concrete.py  Benchmark_Random.py  LibConverter.py  LibConverter_Generic.py
Miner/TempSpecsQuant/: Arith.py  BuildHorn.py  ClauseAST.py  Globals.py  HyperLTLQuant.py  SingleTests.py  SpecsGenerator_Concrete.py  SpecsGenerator_Custom.py  SpecsGenerator_Generic.py  Test_Utilities.py  Tester.py  TraceGenerator.py  Verifier.py
Miner/libprop/: CMakeLists.txt
Miner/libprop/include/: ast.h  ast_adapted.h  formula.h  formula_util.h  parser.h  parser_def.h  trace.h
Miner/libprop/src/: TestLibPropParallel.cpp  formula.cpp  formula_util.cpp  parser.cpp
Results/: README.md
Results/Misc/: Concrete_Formulas2020-04-19 11:36:52.832970  Concrete_Formulas2020-04-19 12:24:19.452128  Concrete_Formulas2020-04-19 12:48:14.573081  Concrete_Formulas2020-04-19 12:53:03.953434  Modified_Page_Table
TraceExamples/: .clang-format
TraceExamples/aes-test/: README.txt
TraceExamples/memwr-fsm-writer/: README.txt  fsm_writer_finished.facts  mem_reg_wr_addr.facts  memarbiter_arbit_holder.facts  memarbiter_arbit_holder_next.facts  memarbiter_arbit_winner.facts  memarbiter_arbiter_state.facts  memarbiter_arbiter_state_next.facts  memwr_reg_state.facts  memwr_start_op.facts  memwr_state_next.facts  memwr_xram_ack.facts  procarbiter_arbit_hold.facts  procarbiter_arbit_holder_next.facts  procarbiter_arbit_winner.facts  procarbiter_arbiter_state.facts  procarbiter_arbiter_state_next.facts  stb_memwr.facts  (+3 more)
(+200 files in other folders)
